--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'chakra petch', sans-serif;
     box-sizing: border-box;
 }
 
@@ -9,8 +10,6 @@
    --primary-textcolor: linear-gradient(to right,  #06384653, #16505d);
    --font-size-Navbar: 25px;
    --border:5px solid #ccc;
-
-
 
 }
 /* .background-color {
@@ -21,7 +20,16 @@
     margin-left: 60px;
     
 } */
-
+/* main {
+    display:flex;
+    flex-direction: row
+} */
+h1 {
+    font-size: 30px;
+    font-family: 'Anton', sans-serif;
+    text-align: center;
+    background-color: #00CDAC;
+}
 .navbar-professional {
     display: flex;
     flex-wrap: wrap;
@@ -29,8 +37,9 @@
     align-items:center;
     padding: 10px;
     height: 9dvh;
-    width: 98.5dvw;
+    width: 100vw;
     background: var(--gradient-background)
+    
     
 }
 .navbar-professional ul {
@@ -48,6 +57,13 @@
     /* color: var(--primary-textcolor); */
 
 } 
+.navbar-professional ul li:hover {
+ background-color: #16505d
+} 
+.navbar-professional ul li:nth-child(odd) {
+    background-color: #1ca8c8
+   } 
+
 
 a {
     text-decoration: none;
@@ -59,37 +75,82 @@ a {
 .container-profile {
     display: flex;
     flex-wrap: wrap;
-    /* flex-direction: row; */
-   justify-content: space-evenly;
-    height: 40dvh;
-    width: 98.5dvw;
-    background-color: bisque;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 400px;
+    width: 100%;
+    background-color: rgb(37, 155, 175);
+    border-radius: 2%;
+    padding: 25px 0 0 0;
+    margin-left: 10rem;
+    
 }
 
 #profile-picture {
+    display: flex;
     /* position: absolute; */
-    border-radius: 25px;
-    max-height: 500px;
-    /* background-color: rgb(45, 16, 126); */
+    border-radius: 25px; 
     padding: 10px;
     margin-top: 40px;
     margin-bottom: 30px;
     margin-left: 50px;
+    align-items: center; 
 }
 .me-about {
+    display: flex;
     margin: 25px;
-    width: 40dvw;
-    padding: 3%;
-    border: var(--border);
+    width: 600px;
     padding: 10px;
-    align-self: center;
+    height: 100px
+    
    
 }
 
 .container-portfolio {
     display: flex;
     flex-wrap: wrap;
-    height: 400px;
-    background-color: crimson
-  
+    flex-direction: column;
+    justify-content: center;
+    min-height: 400px;
+    width: 100%;
+    background-image: linear-gradient(to right,  #02AABD 0%, #00CDAC);
+    border-radius: 2%;
+    padding: 25px 0 0 0;
+    margin-top: 5px;
+    margin-left: 10rem;
+   
 }
+ .education-portfolio {
+    display: flex;
+    height: 200px;
+    width: 700px;
+    padding: 25px;
+    margin-bottom: 5px;
+    border: 4px outset #8b4513;
+
+ }
+ h2 {
+    font-size: 2rem;
+
+ }
+ p {
+    text-align: center;
+ }
+ .workexperience-portfolio {
+    display: flex;
+    min-height: 200px;
+    width: 700px;
+    padding: 25px;
+    border: 4px outset #8b4513;
+    margin-bottom: 5px;
+
+ }
+ .Hobbies-portfolio {
+    display: flex;
+    min-height: 200px;
+    width: 700px;
+    padding: 25px;
+    border: 4px outset #8b4513;
+    margin-bottom: 5px;
+
+ }
