--- a/style.css
+++ b/style.css
@@ -3,43 +3,43 @@
     padding: 0;
     font-family: 'chakra petch', sans-serif;
     box-sizing: border-box;
+    /* outline: 1px solid red; */
+    
 }
-
+/* Declaring global css variables,:root,is a peusdo class selector selecting the element that 
+represents the root of the elements */
 :root {
    --gradient-background: linear-gradient(to right, #033a4953, #29a1bc);
    --gradient-background2: linear-gradient(to left, #b2587b53, #8a0a57);
+   --color: firebrick;
+   --background-color3: whitesmoke;
+   --font-family: 'chakra petch', sans-serif;
+
 
    --font-size-Navbar: 1.5em;
+
    --border:5px solid #ccc;
-   --ff-primary: 'Roboto', sans-serif;
+   /* --ff-primary: 'Roboto', sans-serif; */
 }
-header {
-    max-width: 100dvw;
+
+body{
+   min-height: 100vh;
+   max-width:  100%;
+   overflow-x: hidden !important;
 }
-/* .background-image {
-    background-image: url(./images/background-image.jpg);
-    min-height: 380px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-} */
 .navbar {
- 
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items:center;
     padding: 0;
-    height: 50px;
-    width: 100%;
-    background-image: var(--gradient-background)
-    
-  
-    /* position: sticky; */
+    height: 40px;
+    max-width: 100%;
+    background-image: var(--gradient-background);
+    border-radius:12px;
+    overflow: hidden !important;
 }
 
- 
 .navbar ul {
     display: flex; 
     justify-content: center;
@@ -48,8 +48,8 @@ header {
     padding: 1.2em;
     margin: -1.2em;
     font-size: var(--font-size-Navbar); 
-    position: fixed;
-  
+    font-family: var(--font-family);
+    position: fixed; 
 }
 
 .navbar ul li {
@@ -71,7 +71,7 @@ header {
 a {
     justify-content: center;
     text-decoration: none;
-    color: rgb(211, 45, 16) !important;
+    color: var(--color);
     font-family: 'chakra petch', sans-serif; 
 } 
 /* Pseudo element ::firstline is for adding a special style to the first line in a text */
@@ -80,30 +80,33 @@ p::first-line {
 }
 
 ::selection {
-color: firebrick;
-background: #e6f0f2;
+color: var(--color);
+background: var(--background-color3);
 }
 
 .container-profile {
     display: flex;
     height: 600px;
-    width: 80dvw;
+    width: 100%;
     margin-top: 4px;
     /* background-color: #00CDAC;  */
     background-image: var(--gradient-background);
     border-radius: 2%;
     padding: 25px 0 0 0;
-    margin-left: 10rem; 
+    /* margin-left: 8rem;  */
 }
 
-#profile-picture {
+#background-profile {
     position: absolute;
     border-radius: 25px; 
     margin:1.2rem;
     padding: 10px;
    background-image: var(--gradient-background);
-}
+   max-width:100%;
+   max-height: 100%;
+   
 
+}
 
 .me-about {
     /* display: flex; */
@@ -130,20 +133,20 @@ background: #e6f0f2;
     border-radius: 2px 
 }
 .my-projects #heading-project {
-    color: firebrick;
-    font-family: 'Courier New', Courier, monospace;   
+    color: var(--color);
+    font-family: var(--font-family);  
     background-image: var(--gradient-background);
     border-radius: 12px;
 }
 
 h2 {
     display: inline-block;
-    background-color: white;
+    background-color: var(--background-color3);
     font-size: 25px;;
 }
 
  p {
-    background-color: whitesmoke;
+    background-color: var(--background-color3);
     padding: 2em;
     margin: 1.1rem;
     border-radius: 15px;
@@ -159,7 +162,7 @@ h2 {
     width: 80%;
     height: 500px;
     margin-left: 10rem;
-    margin-right:10rem; 
+    /* margin-right:10rem;  */
     gap: 0.3rem;
     margin-top: 0.3em; 
     margin-bottom: 0.3em;
@@ -167,48 +170,49 @@ h2 {
     border-radius: 10px;
  }
  .page-section:hover  {
-    background-color: #16505d;
+    background-image: url(./images/hover-background.jpg);
+    background-size: cover;
 }
 
 #proj-1 {
-    outline: invert;
+    /* outline: invert; */
     /* align-items: center; */
     margin: 1.2em,1.2em,0,0;
     border-radius: 2px;
-    background-color: white !important;
+    background-color: var(--background-color3) !important;
     
 }
 
 #proj-2 {
-    outline: invert;
+    /* outline: invert; */
     /* align-items: center; */
     margin: 1.2em,1.2em,0,0;
     border-radius: 2px;
-    background-color: white !important;
+    background-color: var(--background-color3) !important;
 }
 #proj-3 {
     outline: invert;
     /* align-items: center; */
     margin: 1.2em,1.2em,0,0;
     border-radius: 2px;
-    background-color: white !important;
+    background-color: var(--background-color3) !important;
 }
 #proj-4 {
     outline: invert;
     /* align-items: center; */
     margin: 1.2em,1.2em,0,0;
     border-radius: 2px;
-    background-color: white !important;
+    background-color: var(--background-color3)!important;
 }
 #proj-5 {
     outline: invert;
     /* align-items: center; */
     margin: 1.2em,1.2em,0,0;
     border-radius: 2px;
-    background-color: white !important;
+    background-color: var(--background-color3) !important;
 }
 h3 {
-    font-family: var(--ff-primary);
+    font-family: var(--font-family);
     font-weight: bold;
 
 }
@@ -218,35 +222,86 @@ h3 {
     text-decoration: dotted;
     /* background-color: #00CDAC; */
     background-image: var(--gradient-background);
-    border-bottom: 15px solid firebrick;
+    border-bottom: 15px solid  var(--color);
     border-radius: 8px;
     min-height: 10dvh;
  }
- .contact-me {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 100px 200px; 
-    width: 88%;
-    height: 100px;
-    margin-left: 10rem;
-    margin-right:10rem; 
+ .contact-info {
+    /* display: grid; */
+    /* grid-template-columns: 1fr 1fr 1fr 1fr; */
+    /* grid-template-rows: 100px 100px;  */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: 10vh;
+    margin-left:10em; 
+    padding: 2%;
     gap: 1rem;
-   background-image: var(--gradient-background);
-   border-radius: 10px;
+    background-image: var(--gradient-background);
+    border-radius: 10px;
+    background-size: cover;
+ }
+ .fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+    border-radius: 5px;
+  }
+  
+  .fa:hover {
+      opacity: 0.7;
+  }
+  
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+  
+  .fa-twitter {
+    background: #55ACEE;
+    color: white;
+  }
+  
+  .fa-google {
+    background: #dd4b39;
+    color: white;
+  }
+  
+  .fa-linkedin {
+    background: #007bb5;
+    color: white;
+  }
+  
+  .fa-instagram {
+    background: #125688;
+    color: white;
+  }
 
+ .contact-info #image-size {
+    max-width: 40px;
+    min-height: 40px;
  }
- .contact-me #image-size {
-    max-width: 50px;
-    max-height: 50px;
+
+ .footer {
+    width: 100%;
+    /* height: 15px;  */
+    padding: 1%;
+    margin-top: 2px;
+    background-image: var(--gradient-background);
+    border-radius: 10px;
+    text-align: center;
  }
-h3{
-    display: block;
-    width: max-content;
+
+
+ @media screen and (max-width: 600px){
+.navbar ul li a:not(:first-child){
+    display: none;  
 }
-
-
- @media screen and (max-width: 980px){
-
 
  }
 
